# dsw-backend-programming

./: .gitignore  README.md
lecture-1/: example-requests.sh  fast-api-example-request.sh  generate-open-api.sh  open-api-example-spec.yaml  open-api-parameters.yaml  open-api-paths.yaml  open-api-responses.yaml  rest-api-example.md
lecture-1/fast-api-example/: main.py
lecture-1/open-api-example/backend/: Dockerfile  openapi.yaml
lecture-1/open-api-example/backend/tests/: test_default_api.py
lecture-1/open-api-example/client/: README.md  setup.py
lecture-1/open-api-example/client/.openapi-generator/: FILES
lectures/lecture-1/: graph-ql-example.md  open-api-example.yaml  open-api-schemas.yaml
lectures/lecture-1/fast-api-example/: Dockerfile
lectures/lecture-1/open-api-example/: docker-compose.yaml
lectures/lecture-1/open-api-example/backend/: setup.cfg
lectures/lecture-1/open-api-example/backend/.openapi-generator/: FILES
lectures/lecture-1/open-api-example/backend/src/openapi_server/apis/: default_api_base.py
lectures/lecture-1/open-api-example/backend/src/openapi_server/models/: order.py
lectures/lecture-2/: orm-example-requests.sh  pydantic-examples-requests.sh  pydantic_examples.py  requirements.txt  sql_alchemy_examples.py  validators.py
lectures/lecture-2/orm-example/: crud.py  database.py  main.py  models.py  schemas.py
lectures/lecture-4/auth/: Dockerfile  auth.py  database.py  docker-compose.yaml  main.py  models.py  requirements.txt  users.py
tasks/task-1/: task1.md
tasks/task-2/: task2.md
(+27 files in other folders)
